// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionType > should render delegate registration 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-theme-secondary-800 sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Delegate Registration
          </div>
        </div>
        <div
          class="hidden h-8 w-full items-center md:flex"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
            type="horizontal"
          />
        </div>
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Delegate
          </div>
          <div>
             
            delegate
             
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render delegate resignation 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-theme-secondary-800 sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Delegate Resignation
          </div>
        </div>
        <div
          class="hidden h-8 w-full items-center md:flex"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
            type="horizontal"
          />
        </div>
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Delegate
          </div>
          <div>
             
            delegate
             
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in lg 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-theme-secondary-800 sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in md 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-theme-secondary-800 sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in sm 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-theme-secondary-800 sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in xl 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-theme-secondary-800 sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render in xs 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-theme-secondary-800 sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Multipayment
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionType > should render ipfs 1`] = `
<div>
  <div
    data-testid="TransactionType"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-theme-secondary-800 sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
          data-testid="DetailLabelText"
        >
          Transaction Type
        </div>
      </div>
      <div
        class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 mt-0 sm:mt-2"
      >
        <div
          class="flex w-full justify-between sm:justify-start"
        >
          <div
            class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
            data-testid="DetailLabelText"
          >
            Category
          </div>
          <div
            class="css-1chzvd4"
            color="neutral"
          >
            Delegate Resignation
          </div>
        </div>
        <div>
          <div
            class="hidden h-8 w-full items-center md:flex"
          >
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ppmbkz"
              type="horizontal"
            />
          </div>
          <div
            class="flex w-full justify-between sm:justify-start"
          >
            <div
              class="no-ligatures text-md font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 min-w-24"
              data-testid="DetailLabelText"
            >
              Hash
            </div>
            <div
              class="flex w-full"
            >
              <span
                class="no-ligatures min-w-0 overflow-hidden"
              >
                QmVqNrDfr2dxzQUo4VN3zhG4NV78uYFmRpgSktWDc2eeh2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
